--- a/programan-community-web/src/main/resources/static/html/top-nav.html
+++ b/programan-community-web/src/main/resources/static/html/top-nav.html
@@ -1,25 +1,25 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bgcolor-4">
 	<div class="container">
-		<a href="#" class="navbar-brand">IT技术社区</a>
+		<a href="#" onfocus="this.blur();" onclick="fill_blog_page();" class="navbar-brand">IT技术社区</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#">主页</a>
+					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">主页</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">博客</a>
+					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">博客</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">论坛</a>
+					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">论坛</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">下载</a>
+					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_download_page()">下载</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">课程</a>
+					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_course_page()">课程</a>
 				</li>
 			</ul>
 
