--- a/programan-community-web/src/main/resources/static/html/blog.html
+++ b/programan-community-web/src/main/resources/static/html/blog.html
@@ -71,7 +71,7 @@
         			<div class="article-box">
         				<div class="article-box-head">
         					<h2>
-        						<a href="#">LINUX LAMP环境搭建论坛升级为LNMP</a>
+        						<a href="#" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
         					</h2>
         				</div>
 	        			<div class="article-box-body">
@@ -106,7 +106,7 @@
         			<div class="article-box">
         				<div class="article-box-head">
         					<h2>
-        						<a href="#">LINUX LAMP环境搭建论坛升级为LNMP</a>
+        						<a href="#" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
         					</h2>
         				</div>
 	        			<div class="article-box-body">
@@ -141,7 +141,7 @@
         			<div class="article-box">
         				<div class="article-box-head">
         					<h2>
-        						<a href="#">LINUX LAMP环境搭建论坛升级为LNMP</a>
+        						<a href="#" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
         					</h2>
         				</div>
 	        			<div class="article-box-body">
