--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -15,17 +15,27 @@
 		<link href="http://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-touch-slider.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery.bscslider.css"/>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-datepicker3.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="https://unpkg.com/popper.js" type="text/javascript" charset="utf-8"></script>
 		<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 		<script src="js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+			  var hm = document.createElement("script");
+			  hm.src = "https://hm.baidu.com/hm.js?a801e15acbfdc05869112ee79b64e35e";
+			  var s = document.getElementsByTagName("script")[0]; 
+			  s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
+
 	</head>
 
 	<body>
 		<div class="page-nav"></div>
 		<div class="page-content">
-
 			
 		</div>
 	</body>
@@ -42,14 +52,19 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<script src="js/jquery.bscslider.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
+	
 	<script src="js/top-nav.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/blog.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/download.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/course.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/edit.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/article.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		fill_top_nav_page();
-		//		fill_blog_page();
-		
+//		fill_blog_page();
+
 	</script>
 
 </html>
