--- a/programan-community-web/src/main/resources/static/html/top-nav.html
+++ b/programan-community-web/src/main/resources/static/html/top-nav.html
@@ -36,7 +36,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="./register.html" onfocus="this.blur();">注册</a>
 				</li>
-				<li class="nav-item dropdown" id="user-dropdown">
+				<li class="nav-item dropdown" id="user-dropdown" sec:authorize="isAuthenticated()">
 					
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">
 						Programan 
