--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>主页</title>
-		<link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+		<!--<link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">-->
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap4.min.css"/>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/css/htmleaf-demo.css" />
+		<link rel="stylesheet" type="text/css" href="/css/default.css" />
+		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link href="http://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-touch-slider.css" />
-		<link rel="stylesheet" type="text/css" href="css/jquery.bscslider.css"/>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-datepicker3.css"/>
-		<link rel="stylesheet" type="text/css" href="css/index.css" />
-		<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="https://unpkg.com/popper.js" type="text/javascript" charset="utf-8"></script>
-		<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-		<script src="js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap-touch-slider.css" />
+		<link rel="stylesheet" type="text/css" href="/css/jquery.bscslider.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker3.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/index.css" />
+		<script src="/js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="https://unpkg.com/popper.js" type="text/javascript" charset="utf-8"></script>-->
+		<script src="/js/popper.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
@@ -39,31 +42,34 @@
 			
 		</div>
 	</body>
-	<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+	<!--<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>-->
+	<script src="/js/jquery1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 		window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
 	</script>
-	<script src="js/jquery.bootstrap-autohidingnavbar.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/stickySidebar.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="http://cdn.bootcss.com/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
-	<script src="js/bootstrap-touch-slider.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jquery-tab.js" type="text/javascript" charset="utf-8"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="js/jquery.bscslider.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/jquery.bootstrap-autohidingnavbar.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/stickySidebar.js" type="text/javascript" charset="utf-8"></script>
+	<!--<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+	<script src="/js/bootstrap3.3.6.min.js" type="text/javascript" charset="utf-8"></script>
+	<!--<script src="http://cdn.bootcss.com/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>-->
+	<script src="/js/jquery.touchSwipe.min..js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/bootstrap-touch-slider.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/jquery-tab.js" type="text/javascript" charset="utf-8"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
+	<script src="/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/jquery.bscslider.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
 	
-	<script src="js/top-nav.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/blog.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/top-nav.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/blog.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/download.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/course.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/edit.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/article.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/course.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/edit.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/article.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		fill_top_nav_page();
-//		fill_blog_page();
+		fill_blog_page();
 
 	</script>
 
