--- a/programan-community-web/src/main/resources/static/login.html
+++ b/programan-community-web/src/main/resources/static/login.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<head>
 		<meta charset="UTF-8">
+		<!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
+		<!-- default header name is X-CSRF-TOKEN -->
+		<!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 		<title>登录</title>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="bootstrap/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div class="login-page">
@@ -33,10 +35,13 @@
 				</div>
 				<div class="login-box">
 					<h3>登录</h3>
-					<form class="form-horizontal" role="form">
-			        		<input type="text" placeholder="输入用户名" class="form-control"> 
-			        		<input type="text" placeholder="输入密码" class="form-control"> 
-			        		<input type="button" class="submit-input" name="" id="" value="登录" />
+					<form class="form-horizontal" action="/user/login" method="post">
+			        		<input type="text" name="username" placeholder="输入用户名" class="form-control"> 
+			        		<input type="text" name="password" placeholder="输入密码" class="form-control"> 
+			        		<!--<input name="remember-me" type="checkbox" class="remember-me">-->
+			        		<!--<span>记住我</span>-->
+			        		<!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+			        		<input type="submit" class="submit-input" name="" id="" value="登录" />
 			        </form>
 			        <div class="login-box-footer">
 			        		<a href="#" onfocus="this.blur();">忘记密码</a>
