--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -8,7 +8,8 @@
 		<title>主页</title>
 		<!--<link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">-->
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap4.min.css"/>
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.min.css"/>
+		<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
 		<link rel="stylesheet" type="text/css" href="/css/htmleaf-demo.css" />
 		<link rel="stylesheet" type="text/css" href="/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
