--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 	<head>
 		<meta charset="UTF-8">
@@ -38,10 +38,14 @@
 	</head>
 
 	<body>
+
 		<div class="page-nav"></div>
 		<div class="page-content">
 			
 		</div>
+		<div sec:authorize="hasRole('ROLE_ADMIN')">哈哈哈哈</div>
+		<strong class="reg" sec:authentication="name"></strong>
+
 	</body>
 	<!--<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>-->
 	<script src="/js/jquery1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
@@ -64,14 +68,13 @@
 	
 	<script src="/js/top-nav.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/blog.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/download.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/download.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/course.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/edit.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/article.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		fill_top_nav_page();
 		fill_blog_page();
-
 	</script>
 
 </html>
