--- a/programan-community-web/src/main/resources/static/html/edit.html
+++ b/programan-community-web/src/main/resources/static/html/edit.html
@@ -1,8 +1,8 @@
 <div class="edit-page">
 	<div class="container">
 		<div class="edit-left">
-			<a href="#" onfocus="this.blur();" onclick="loadEditBlogRight()">写文章</a>
-			<a href="#" onfocus="this.blur();" onclick="loadArticleManage()">文章管理</a>
+			<a href="#/edit/blog" onfocus="this.blur();">写文章</a>
+			<a href="#/article/managel" onfocus="this.blur();">文章管理</a>
 		</div>
 		<div class="edit-right">
 			
