--- a/programan-community-web/src/main/resources/static/html/article.html
+++ b/programan-community-web/src/main/resources/static/html/article.html
@@ -1,3 +1,4 @@
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <div class="article">
 	<div class="article-left">
 		<div class="auth-info">
@@ -7,8 +8,8 @@
 						<img src="img/test/xiaohuangren.png"/>
 					</a>
 				</span>
-				<span>
-					Programan
+				<span th:text="${user.roleName}">
+
 				</span>
 				<span>
 					<input type="button" class="submit-input" value="关注"/>
@@ -33,24 +34,34 @@
 	</div>
 	<div class="article-right">
 		<div class="title">
-			<div class="artitle-type">
-				转
+			<input type="hidden" name="articleId" id="articleId" th:value="${article.id}" />
+			<div class="artitle-type" id="articleCreateType" th:text="${article.createType.name}">
+
 			</div>
-			<h2>
-				cookie已凉，浏览器存储该怎么做
+			<h2 id="artitleTitle" th:text="${article.title}">
+
 			</h2>
 			<div>
-				<span>
-					2019年04月03日 09:51:41
+				<span id="articleCreateTime" th:text="${article.createTime}">
+
 				</span>
-				<span>
-					programan
+				<span id="articleAuth" th:text="${user.roleName}">
+
 				</span>
-				<span>
-					阅读数：30
+				<span style="margin: 0">阅读数：</span>
+				<span id="articleReadNum" th:text="${article.readNum}" style="margin-left: 0">
+
+				</span>
+				<span class="float-right">
+					<a href="#/edit/blog" th:onclick="'reditArticle(' + ${article.id} + ')'">编辑</a>
 				</span>
 			</div>
 		</div>
-		<div class="article-body"></div>
+		<div class="article-body" id="articleBody" th:utext="${article.body}"></div>
+		<div class="article-comment">
+			<textarea name="articleComment" id="articleComment" class="article-comment-text" placeholder="想对作者说点什么呢"></textarea>
+			<input type="button" class="submit-input" value="发表评论" id="savaArticleCommentBtn">
+		</div>
 	</div>
 </div>
+</html>
