--- a/programan-community-web/src/main/resources/static/html/articleManage.html
+++ b/programan-community-web/src/main/resources/static/html/articleManage.html
@@ -1,90 +1,95 @@
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <div class="article-finder">
 	<label>
 		<span>文章类型：</span>
-		<select name="articleType">
-			<option value="1" selected>原创</option>
-			<option value="1">转载</option>
-			<option value="1">翻译</option>
+		<select name="createType" id="createType" th:value="${createTypeId}">
+			<option value="0">所有</option>
+			<option th:each="list:${createTypeList}" th:if="${list.id eq createTypeId}" th:selected="selected" th:value="${list.id}" th:text="${list.name }"></option>
+			<option th:each="list:${createTypeList}" th:if="${list.id ne createTypeId}" th:value="${list.id}" th:text="${list.name }"></option>
 		</select>
 	</label>
 	<label>
 		<span>博客分类：</span>
-		<select name="blogType">
-			<option value="1" selected>人工智能</option>
-			<option value="1">大数据</option>
-			<option value="1">互联网</option>
-			<option value="1">游戏开发</option>
+		<select name="topic" id="topic" th:value="${topicId}">
+			<option value="0">所有</option>
+			<option th:each="list:${topicList}" th:if="${list.id eq topicId}" th:selected="selected" th:value="${list.id}" th:text="${list.name }"></option>
+			<option th:each="list:${topicList}" th:if="${list.id ne topicId}" th:value="${list.id}" th:text="${list.name }"></option>
 		</select>
 	</label>
 	<label>
-		<input type="text" placeholder="输入标题关键字" class="form-control"> 
-		<input type="button" class="submit-input" value="搜索"/>
+		<input type="text" placeholder="输入标题关键字" class="form-control" id="articleTitle" th:value="${articleTitle}">
+		<input type="button" class="submit-input" value="搜索" id="selectArticleBtn"/>
 	</label>
 </div>
 <div class="article-list">
-	<div class="article-single">
-		<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
+	<div class="article-single" th:each="alist: ${articleList}">
+		<a class="title" href="#" onfocus="this.blur();" th:onclick="'fill_article_page(' + ${alist.id} + ')'" th:text="${alist.title}"></a>
 		<div class="article-single-data">
-			<span>转载</span>
-			<span>2019年04月02日 13:30:38</span>
-			<span><i class="fa fa-leanpub fa-fw"></i>2</span>
+			<span th:text="${alist.createType.name}"></span>
+			<span th:text="${alist.createTime}">2019年04月02日 13:30:38</span>
+			<span>
+				<i class="fa fa-leanpub fa-fw"></i>
+				<span th:text="${alist.readNum}"></span>
+			</span>
 			<span><i class="fa fa-commenting-o fa-fw"></i>2</span>
 			<div class="operation">
-				<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
-				<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
+				<a href="#/edit/blog" th:onclick="'reditArticle(' + ${alist.id} + ')'" style="border-right: 1px solid #B2B2B2;">编辑</a>
+				<a href="#" th:onclick="'fill_article_page(' + ${alist.id} + ')'" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
+				<a href="#" th:onclick="'del_article(' + ${alist.id} + ')'" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
 			</div>
 		</div>
 	</div>
-	<div class="article-single">
-		<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
-		<div class="article-single-data">
-			<span>转载</span>
-			<span>2019年04月02日 13:30:38</span>
-			<span><i class="fa fa-leanpub fa-fw"></i>2</span>
-			<span><i class="fa fa-commenting-o fa-fw"></i>2</span>
-			<div class="operation">
-				<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
-				<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
-			</div>
-		</div>
-	</div>
-	<div class="article-single">
-		<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
-		<div class="article-single-data">
-			<span>转载</span>
-			<span>2019年04月02日 13:30:38</span>
-			<span><i class="fa fa-leanpub fa-fw"></i>2</span>
-			<span><i class="fa fa-commenting-o fa-fw"></i>2</span>
-			<div class="operation">
-				<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
-				<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
-			</div>
-		</div>
-	</div>
-	<div class="article-single">
-		<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
-		<div class="article-single-data">
-			<span>转载</span>
-			<span>2019年04月02日 13:30:38</span>
-			<span><i class="fa fa-leanpub fa-fw"></i>2</span>
-			<span><i class="fa fa-commenting-o fa-fw"></i>2</span>
-			<div class="operation">
-				<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
-				<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
-			</div>
-		</div>
-	</div>
-	<div class="article-single">
-		<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>
-		<div class="article-single-data">
-			<span>转载</span>
-			<span>2019年04月02日 13:30:38</span>
-			<span><i class="fa fa-leanpub fa-fw"></i>2</span>
-			<span><i class="fa fa-commenting-o fa-fw"></i>2</span>
-			<div class="operation">
-				<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>
-				<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>
-			</div>
-		</div>
-	</div>
+	<!--<div class="article-single">-->
+		<!--<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>-->
+		<!--<div class="article-single-data">-->
+			<!--<span>转载</span>-->
+			<!--<span>2019年04月02日 13:30:38</span>-->
+			<!--<span><i class="fa fa-leanpub fa-fw"></i>2</span>-->
+			<!--<span><i class="fa fa-commenting-o fa-fw"></i>2</span>-->
+			<!--<div class="operation">-->
+				<!--<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>-->
+				<!--<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+	<!--<div class="article-single">-->
+		<!--<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>-->
+		<!--<div class="article-single-data">-->
+			<!--<span>转载</span>-->
+			<!--<span>2019年04月02日 13:30:38</span>-->
+			<!--<span><i class="fa fa-leanpub fa-fw"></i>2</span>-->
+			<!--<span><i class="fa fa-commenting-o fa-fw"></i>2</span>-->
+			<!--<div class="operation">-->
+				<!--<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>-->
+				<!--<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+	<!--<div class="article-single">-->
+		<!--<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>-->
+		<!--<div class="article-single-data">-->
+			<!--<span>转载</span>-->
+			<!--<span>2019年04月02日 13:30:38</span>-->
+			<!--<span><i class="fa fa-leanpub fa-fw"></i>2</span>-->
+			<!--<span><i class="fa fa-commenting-o fa-fw"></i>2</span>-->
+			<!--<div class="operation">-->
+				<!--<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>-->
+				<!--<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+	<!--<div class="article-single">-->
+		<!--<a class="title" href="#" onfocus="this.blur();" onclick="fill_article_page()">LINUX LAMP环境搭建论坛升级为LNMP</a>-->
+		<!--<div class="article-single-data">-->
+			<!--<span>转载</span>-->
+			<!--<span>2019年04月02日 13:30:38</span>-->
+			<!--<span><i class="fa fa-leanpub fa-fw"></i>2</span>-->
+			<!--<span><i class="fa fa-commenting-o fa-fw"></i>2</span>-->
+			<!--<div class="operation">-->
+				<!--<a href="#" onfocus="this.blur();" style="border-right: 1px solid #B2B2B2;">查看</a>-->
+				<!--<a href="#" onfocus="this.blur();" style="color: rgb(199,34,45);">删除</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
 </div>
+</html>
