--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -25,15 +25,21 @@
 		<!--<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
 		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/layer/layer.js" type="text/javascript" charset="utf-8"></script>
 		<script>
-			var _hmt = _hmt || [];
-			(function() {
-			  var hm = document.createElement("script");
-			  hm.src = "https://hm.baidu.com/hm.js?a801e15acbfdc05869112ee79b64e35e";
-			  var s = document.getElementsByTagName("script")[0]; 
-			  s.parentNode.insertBefore(hm, s);
-			})();
+//			var _hmt = _hmt || [];
+//			(function() {
+//			  var hm = document.createElement("script");
+//			  hm.src = "https://hm.baidu.com/hm.js?a801e15acbfdc05869112ee79b64e35e";
+//			  var s = document.getElementsByTagName("script")[0]; 
+//			  s.parentNode.insertBefore(hm, s);
+//			})();
 		</script>
+		<style type="text/css">
+			body{
+				background-color: rgba(243,243,243,1);
+			}
+		</style>
 
 	</head>
 
@@ -43,8 +49,8 @@
 		<div class="page-content">
 			
 		</div>
-		<div sec:authorize="hasRole('ROLE_ADMIN')">哈哈哈哈</div>
-		<strong class="reg" sec:authentication="name"></strong>
+		<!--<div sec:authorize="hasRole('ROLE_ADMIN')">哈哈哈哈</div>
+		<strong class="reg" sec:authentication="name"></strong>-->
 
 	</body>
 	<!--<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>-->
@@ -52,6 +58,7 @@
 	<script>
 		window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
 	</script>
+	<script src="js/jquery.history.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/jquery.bootstrap-autohidingnavbar.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/stickySidebar.js" type="text/javascript" charset="utf-8"></script>
 	<!--<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
@@ -64,8 +71,9 @@
 	<script src="/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/jquery.bscslider.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/callUrl.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
-	
+	<script src="js/m-user.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/top-nav.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/blog.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/download.js" type="text/javascript" charset="utf-8"></script>
@@ -75,6 +83,11 @@
 	<script type="text/javascript">
 		fill_top_nav_page();
 		fill_blog_page();
+		var url = window.location.href;
+		if(url.indexOf('#') != -1) {
+//			var target_url = url.slice(url.indexOf('#') + 1);
+			window.location.href=url.slice(0,url.indexOf('#'));
+		}
 	</script>
 
 </html>
