--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -71,6 +71,7 @@
 	<script src="/js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/jquery.bscslider.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/jquery.showLoading.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/callUrl.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/m-user.js" type="text/javascript" charset="utf-8"></script>
@@ -85,7 +86,6 @@
 		fill_blog_page();
 		var url = window.location.href;
 		if(url.indexOf('#') != -1) {
-//			var target_url = url.slice(url.indexOf('#') + 1);
 			window.location.href=url.slice(0,url.indexOf('#'));
 		}
 	</script>
