--- a/programan-community-web/src/main/resources/static/html/top-nav.html
+++ b/programan-community-web/src/main/resources/static/html/top-nav.html
@@ -9,10 +9,10 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">主页</a>
+					<a class="nav-link" href="#/index/blog" onfocus="this.blur();">主页</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">博客</a>
+					<a class="nav-link" href="#/index/blog" onfocus="this.blur();">博客</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#" onfocus="this.blur();" onclick="fill_blog_page();">论坛</a>
@@ -55,7 +55,7 @@
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#/user/info"><i class="fa fa-user-o fa-fw"></i>&nbsp; 个人中心</a>
 						<a class="dropdown-item" href="#" onclick="fill_user_base_info_page()"><i class="fa fa-gear fa-fw"></i>&nbsp; 账号设置</a>
-						<a class="dropdown-item" href="#"><i class="fa fa-unlink fa-fw"></i>&nbsp; 退出</a>
+						<a class="dropdown-item" href="/user/logout"><i class="fa fa-unlink fa-fw"></i>&nbsp; 退出</a>
 					</div>
 					
 				</li>
