--- a/programan-community-web/src/main/resources/static/login.html
+++ b/programan-community-web/src/main/resources/static/login.html
@@ -37,7 +37,7 @@
 					<h3>登录</h3>
 					<form class="form-horizontal" action="/user/login" method="post">
 			        		<input type="text" name="username" placeholder="输入用户名" class="form-control"> 
-			        		<input type="text" name="password" placeholder="输入密码" class="form-control"> 
+			        		<input type="password" name="password" placeholder="输入密码" class="form-control"> 
 			        		<!--<input name="remember-me" type="checkbox" class="remember-me">-->
 			        		<!--<span>记住我</span>-->
 			        		<!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
