[programan] 文件上传，功能完善，线上

--- a/programan-community-web/src/main/resources/static/html/article.html
+++ b/programan-community-web/src/main/resources/static/html/article.html
@@ -5,7 +5,7 @@
 			<div class="auth-info-top">
 				<span>
 					<a href="#" onfocus="this.blur();">
-						<img src="img/test/xiaohuangren.png"/>
+						<img th:src="${user.headImgUrl}"/>
 					</a>
 				</span>
 				<input type="hidden" name="authId" id="authId" th:value="${user.id}" />
