--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -74,7 +74,7 @@
 	<script src="/js/jquery.showLoading.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/callUrl.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/wangEditor.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/m-user.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/m-user.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/top-nav.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/blog.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/download.js" type="text/javascript" charset="utf-8"></script>
