--- a/programan-community-web/src/main/resources/static/html/m-user-detail.html
+++ b/programan-community-web/src/main/resources/static/html/m-user-detail.html
@@ -78,10 +78,19 @@
                                 <label class="control-label col-sm-1" for="headImgUrl">头像: </label>
                                 <div class=" col-sm-5">
                                     <input type="text" class="form-control" id="headImgUrl" name="headImgUrl" placeholder="头像">
+                                    <a class="upload-btn" href="#" onfocus="this.blur();" data-toggle="modal" data-target="#uploadFile">
+                                    		<i class="fa fa-plus-circle"></i>
+                                    </a>
                                 </div>
                                 <label class="control-label col-sm-1" for="pNum">P豆: </label>
                                 <div class=" col-sm-5">
                                     <input type="text" class="form-control" id="pNum" name="pNum" placeholder="P豆数量">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-1" for="phone">电话: </label>
+                                <div class=" col-sm-5">
+                                    <input type="text" class="form-control" id="phone" name="phone" placeholder="头像">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -104,4 +113,23 @@
             </div>
         </div>
     </div>
+</div>
+
+<!--模态层-->
+<div class="modal fade" id="uploadFile" tabIndex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    	<div class="modal-dialog">
+        	<div class="modal-content">
+        		<div class="modal-header">
+	            	<button type="button" class="close" data-dismiss="modal">&times;</button>
+	            	<h4 class="text-center">上传文件</h4>
+            </div>
+            	<div class="modal-body">
+            		<div class="head-img">
+            			<img src="" id="imgs">
+            		</div>
+	            文件：<input onchange="get_img(this)" type="file" name="fileUpload" id="fileUpload"/>
+	            <input class="model-btn" type="button" value="上传" onclick="mUpdateImg('headImgUrl', 'imgs')" style="margin-top: 10px;"/>
+            </div>
+        </div>
+    </div> 
 </div>
