--- a/programan-community-web/src/main/resources/static/html/userBaseEdit.html
+++ b/programan-community-web/src/main/resources/static/html/userBaseEdit.html
@@ -3,32 +3,33 @@
 		<div class="edit-left">
 			<a href="#" onfocus="this.blur();" onclick="updateUserBaseInfo(0)">修改密码</a>
 			<a href="#" onfocus="this.blur();" onclick="updateUserBaseInfo(1)">修改手机</a>
-			<a href="#" onfocus="this.blur();" onclick="updateUserBaseInfo(2)">修改邮箱</a>
+			<!--<a href="#" onfocus="this.blur();" onclick="updateUserBaseInfo(2)">修改邮箱</a>-->
 		</div>
 		<div class="edit-right">
 			<div id="updateUserpwdDiv" class="user-info-update" style="display: none;">
 				<h2>修改密码</h2>
 				<div class="update-body">
-					<input type="text" placeholder="输入旧密码" class="form-control">
-					<input type="text" placeholder="输入新密码" class="form-control">
-					<input type="text" placeholder="确认新密码" class="form-control">  
-					<input type="submit" value="修改" class="btn btn-info">
+					<input type="password" placeholder="输入新密码" class="form-control" id="newPwd">
+					<input type="password" placeholder="确认新密码" class="form-control" id="rnewPwd">
+					<input type="text" placeholder="输入手机号码" class="form-control" id="phoneNumber">
+					<input type="submit" value="修改" class="btn btn-info" onclick="updatePwd()">
 				</div>
 			</div>
 			<div id="updateUserPhoneDiv" class="user-info-update" style="display: none;">
 				<h2>修改手机</h2>
 				<div class="update-body">
-					<input type="text" placeholder="输入新手机号码" class="form-control">
-					<input type="submit" value="修改" class="btn btn-info">
+					<input type="text" placeholder="输入旧手机号码" class="form-control" id="oldPhoneNumber">
+					<input type="text" placeholder="输入新手机号码" class="form-control" id="newPhoneNumber">
+					<input type="submit" value="修改" class="btn btn-info" onclick="updatePhoneNumberBtn()">
 				</div>
 			</div>
-			<div id="updateUserEmailDiv" class="user-info-update" style="display: none;">
+			<!--<div id="updateUserEmailDiv" class="user-info-update" style="display: none;">
 				<h2>修改邮箱</h2>
 				<div class="update-body">
 					<input type="text" placeholder="输入新邮箱" class="form-control">
 					<input type="submit" value="修改" class="btn btn-info">
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div>
