--- a/programan-community-web/src/main/resources/static/login.html
+++ b/programan-community-web/src/main/resources/static/login.html
@@ -36,17 +36,18 @@
 				<div class="login-box">
 					<h3>登录</h3>
 					<form class="form-horizontal" action="/user/login" method="post">
-			        		<input type="text" name="username" placeholder="输入用户名" class="form-control"> 
-			        		<input type="password" name="password" placeholder="输入密码" class="form-control"> 
+			        		<input type="text" name="username" placeholder="输入用户名" class="form-control" th:value="${username}">
+			        		<input type="password" name="password" placeholder="输入密码" class="form-control" th:value="${pwd}">
 			        		<!--<input name="remember-me" type="checkbox" class="remember-me">-->
 			        		<!--<span>记住我</span>-->
 			        		<!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
 			        		<input type="submit" class="submit-input" name="" id="" value="登录" />
+							<label th:if="${username ne null}">注册成功！</label>
+							<label th:if="${param.error}" style="color: red;font-weight: 400;">用户名或密码错误,请重新输入!</label>
 			        </form>
 			        <div class="login-box-footer">
-			        		<a href="#" onfocus="this.blur();">忘记密码</a>
-			        		<a href="#" onfocus="this.blur();">忘记账号</a>
-			        		<a href="#" onfocus="this.blur();">免费注册</a>
+			        		<a href="/forgetPwdPage" target="_blank" onfocus="this.blur();">忘记密码</a>
+			        		<a href="/register" onfocus="this.blur();">免费注册</a>
 			        </div>
 				</div>
 			</div>
