--- a/programan-community-web/src/main/resources/static/html/download.html
+++ b/programan-community-web/src/main/resources/static/html/download.html
@@ -21,3 +21,19 @@
 		  </div>
 	</div>
 </div>
+
+<!--模态层-->
+<div class="modal fade" id="downloadFile" tabIndex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    	<div class="modal-dialog">
+        	<div class="modal-content">
+        		<div class="modal-header">
+	            	<button type="button" class="close" data-dismiss="modal">&times;</button>
+	            	<h4 class="text-center">下载资源</h4>
+            </div>
+            	<div class="modal-body">
+            		<a id="downloadFileUrl" href="" onclick="updatePNum()">点击开始下载</a>
+            		<input type="hidden" id="downloadFilePrice" value=""/>
+            	</div>
+        </div>
+    </div> 
+</div>
