--- a/programan-community-web/src/main/resources/static/html/m-user-detail.html
+++ b/programan-community-web/src/main/resources/static/html/m-user-detail.html
@@ -127,8 +127,8 @@
             		<div class="head-img">
             			<img src="" id="imgs">
             		</div>
-	            文件：<input onchange="get_img(this)" type="file" name="fileUpload" id="fileUpload"/>
-	            <input class="model-btn" type="button" value="上传" onclick="mUpdateImg('headImgUrl', 'imgs')" style="margin-top: 10px;"/>
+	            文件：<input onchange="get_img(this)" type="file" name="fileUpload3" id="fileUpload3"/>
+	            <input class="model-btn" type="button" value="上传" onclick="mUploadFile('headImgUrl', 'imgs', 'uploadFile', 'fileUpload3')" style="margin-top: 10px;"/>
             </div>
         </div>
     </div> 
