--- a/programan-community-web/src/main/resources/static/html/userInfoEdit.html
+++ b/programan-community-web/src/main/resources/static/html/userInfoEdit.html
@@ -6,8 +6,8 @@
 			<a href="#/user/funs" onfocus="this.blur();">我的粉丝</a>
 			<hr />
 			<a href="#/article/manage" onfocus="this.blur();">我的博客</a>
-			<a href="#" onfocus="this.blur();">我的下载</a>
-			<a href="#" onfocus="this.blur();">我的课程</a>
+			<!--<a href="#" onfocus="this.blur();">我的下载</a>-->
+			<a href="#/user/course" onfocus="this.blur();">我的课程</a>
 		</div>
 		<div class="edit-right">
 			<div id="userInfoDiv" class="user-info-update" style="display: none;">
@@ -56,6 +56,12 @@
 			<div id="userFansDiv" class="user-info-update" style="display: none;">
 				<h2>我的粉丝</h2>
 				<div class="info-body" id="my-fans">
+					
+				</div>
+			</div>
+			<div id="userCourseDiv" class="user-info-update" style="display: none;">
+				<h2>我的课程</h2>
+				<div class="info-body" id="my-course">
 					
 				</div>
 			</div>
