--- a/programan-community-web/src/main/resources/static/html/m-advertisement-detail.html
+++ b/programan-community-web/src/main/resources/static/html/m-advertisement-detail.html
@@ -30,6 +30,9 @@
                                 <label class="control-label col-sm-1" for="imagePath">图片路径: </label>
                                 <div class=" col-sm-5">
                                     <input type="text" class="form-control" name="imagePath" id="imagePath" placeholder="图片路径">
+                                    <a class="upload-btn" href="#" onfocus="this.blur();" data-toggle="modal" data-target="#uploadAdImg">
+	                                		<i class="fa fa-plus-circle"></i>
+	                                </a>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -66,4 +69,24 @@
             </div>
         </div>
     </div>
+</div>
+
+
+<div class="modal fade" id="uploadAdImg" tabIndex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    	<div class="modal-dialog">
+        	<div class="modal-content">
+        		<div class="modal-header">
+	            	<button type="button" class="close" data-dismiss="modal">&times;</button>
+	            	<h4 class="text-center">上传文件</h4>
+            </div>
+            	<div class="modal-body">
+            		<div class="head-img">
+            			<img src="" id="imgs" style="display: none;">
+            		</div>
+	            文件：<input onchange="get_img(this)" type="file" name="fileUpload6" id="fileUpload6"/>
+	            <div class="progress-bar" id="progress-bar" style="float: none;"></div>
+	            <input class="model-btn" type="button" value="上传" onclick="mUploadFile('imagePath', 'ddvertisement', 'uploadAdImg', 'fileUpload6')" style="margin-top: 10px;"/>
+            </div>
+        </div>
+    </div> 
 </div>
