--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link href="http://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap-touch-slider.css" />
+		<!--<link rel="stylesheet" type="text/css" href="/css/video-js.min.css"/>-->
 		<link rel="stylesheet" type="text/css" href="/css/jquery.bscslider.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker3.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/index.css" />
@@ -25,15 +26,16 @@
 		<!--<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
 		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="/js/video.min.js" type="text/javascript" charset="utf-8"></script>-->
 		<script src="/layer/layer.js" type="text/javascript" charset="utf-8"></script>
 		<script>
-//			var _hmt = _hmt || [];
-//			(function() {
-//			  var hm = document.createElement("script");
-//			  hm.src = "https://hm.baidu.com/hm.js?a801e15acbfdc05869112ee79b64e35e";
-//			  var s = document.getElementsByTagName("script")[0]; 
-//			  s.parentNode.insertBefore(hm, s);
-//			})();
+			var _hmt = _hmt || [];
+			(function() {
+			  var hm = document.createElement("script");
+			  hm.src = "https://hm.baidu.com/hm.js?a801e15acbfdc05869112ee79b64e35e";
+			  var s = document.getElementsByTagName("script")[0]; 
+			  s.parentNode.insertBefore(hm, s);
+			})();
 		</script>
 		<style type="text/css">
 			body{
@@ -51,14 +53,18 @@
 		</div>
 		<!--<div sec:authorize="hasRole('ROLE_ADMIN')">哈哈哈哈</div>
 		<strong class="reg" sec:authentication="name"></strong>-->
-
+		<div class="article-main" id="loading-ani" style="height: 100px;position: relative;z-index: -1;">
+			<div id="loading-article-page" class="loading-indicator" style="z-index: 5001;display: none;">
+				
+			</div>
+		</div>
 	</body>
 	<!--<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>-->
 	<script src="/js/jquery1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 		window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
 	</script>
-	<script src="js/jquery.history.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/jquery.history.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/jquery.bootstrap-autohidingnavbar.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/js/stickySidebar.js" type="text/javascript" charset="utf-8"></script>
 	<!--<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
@@ -88,6 +94,7 @@
 		if(url.indexOf('#') != -1) {
 			window.location.href=url.slice(0,url.indexOf('#'));
 		}
+		
 	</script>
 
 </html>
