--- a/programan-community-web/src/main/resources/static/html/course.html
+++ b/programan-community-web/src/main/resources/static/html/course.html
@@ -1,12 +1,22 @@
 <div class="container">
 	<div class="htmleaf-container">
 		<div id="main">
-			<div class="slider slider1">
-				<img src="img/test/img1.jpg"/>
-				<img src="img/test/img2.jpg"/>
-				<img src="img/test/img3.jpg"/>
-				<img src="img/test/img4.jpg"/>
-				<img src="img/test/img5.jpg"/>
+			<!--<div class="slider slider1">
+				<a href="#"><img src="img/test/img1.jpg"/></a>
+				<a href="#"><img src="img/test/img2.jpg"/></a>
+				<a href="#"><img src="img/test/img3.jpg"/></a>
+				<a href="#"><img src="img/test/img4.jpg"/></a>
+				<a href="#"><img src="img/test/img5.jpg"/></a>
+			</div>-->
+			<div class="container course-slider" style="width: 1140px;height: 250px;">
+				<div class="slider" id="slider-course-top">
+					<button type="button" class="button button-prev">
+						<i class="fa fa-chevron-left" aria-hidden="true"></i>
+					</button>
+					<button type="button" class="button button-next">
+						<i class="fa fa-chevron-right" aria-hidden="true"></i>
+					</button>
+				</div>
 			</div>
 		</div>
 		<div class="course-list">
