--- a/programan-community-web/src/main/resources/static/html/m-advertisement2.html
+++ b/programan-community-web/src/main/resources/static/html/m-advertisement2.html
@@ -37,10 +37,10 @@
                 </div>
                 <div class="widget-body">
                     <div class="table-toolbar">
-                        <a id="addAdvertisementBtn" href="javascript:void(0);" class="btn btn-default">
+                        <a id="addAdvertisement2Btn" href="javascript:void(0);" class="btn btn-default">
                             添加
                         </a>
-                        <button id="purgeAdvertisementBtn" class="btn btn-danger"><i class="fa fa-times"></i> 删除</button>
+                        <button id="purgeAdvertisement2Btn" class="btn btn-danger"><i class="fa fa-times"></i> 删除</button>
                         <div class="btn-group pull-right">
                             <!--<a class="btn btn-default" href="javascript:void(0);">Tools</a>
                             <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"><i class="fa fa-angle-down"></i></a>-->
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                     </div>
-                    <table class="table table-striped table-hover table-bordered" id="advertisementdatatable">
+                    <table class="table table-striped table-hover table-bordered" id="advertisement2datatable">
                         <thead>
                             <tr role="row">
                             		<th>
@@ -76,13 +76,13 @@
                                     编号
                                 </th>
                                 <th>
-                                    内容
+                                    上内容
+                                </th>
+                                <th>
+                                    下内容
                                 </th>
                                 <th>
                                     创建日期
-                                </th>
-                                <th>
-                                    播放顺序
                                 </th>
                                 <th>
                                     位置
