--- a/programan-community-web/src/main/resources/static/html/blog.html
+++ b/programan-community-web/src/main/resources/static/html/blog.html
@@ -12,41 +12,12 @@
 	
 		<div class="main_content" id="content">
 			
-			<div id="bootstrap-touch-slider" class="carousel bs-slider fade  control-round indicators-line" data-ride="carousel" data-pause="hover" data-interval="5000" >
+			<div id="bootstrap-touch-slider" class="carousel bs-slider fade  control-round indicators-line" style="width: 700px;height: 311px;" data-ride="carousel" data-pause="hover" data-interval="5000" >
 	            <ol class="carousel-indicators">
-	                <li data-target="#bootstrap-touch-slider" data-slide-to="0" class="active"></li>
-	                <li data-target="#bootstrap-touch-slider" data-slide-to="1"></li>
-	                <li data-target="#bootstrap-touch-slider" data-slide-to="2"></li>
+	            	
 	            </ol>
 	            <div class="carousel-inner" role="listbox">
-	                <div class="item active">
-	                    <img src="img/test/slide1.png" alt="Bootstrap Touch Slider"  class="slide-image"/>
-	                    <div class="bs-slider-overlay"></div>
-	                    <div class="container">
-	                        <div class="row">
-	                            <div class="slide-text slide_style_center">
-	                                <h3 data-animation="animated zoomInRight">Bootstrap Carousel</h3>
-	                                <p data-animation="animated fadeInLeft">Bootstrap carousel now touch enable slide.</p>
-	                            </div>
-	                        </div>
-	                    </div>
-	                </div>
-	                <div class="item">
-	                    <img src="img/test/slide2.png" alt="Bootstrap Touch Slider"  class="slide-image"/>
-	                    <div class="bs-slider-overlay"></div>
-	                    <div class="slide-text slide_style_center">
-	                        <h3 data-animation="animated flipInX">Bootstrap touch slider</h3>
-	                        <p data-animation="animated lightSpeedIn">Make Bootstrap Better together.</p>
-	                    </div>
-	                </div>
-	                <div class="item">
-	                    <img src="img/test/slide3.png" alt="Bootstrap Touch Slider"  class="slide-image"/>
-	                    <div class="bs-slider-overlay"></div>
-	                    <div class="slide-text slide_style_center">
-	                        <h3 data-animation="animated zoomInLeft">Beautiful Animations</h3>
-	                        <p data-animation="animated fadeInRight">Lots of css3 Animations to make slide beautiful .</p>
-	                    </div>
-	                </div>
+	                 
 	            </div>
 	            <a class="left carousel-control" href="#bootstrap-touch-slider" role="button" data-slide="prev">
 	                <span class="fa fa-angle-left" aria-hidden="true"></span>
@@ -71,7 +42,7 @@
 		
 		<div class="right_content">
 			
-			<div class="container">
+			<div class="container" style="width: 400px;height: 250px;">
 				<div class="slider" id="slider">
 					<button type="button" class="button button-prev">
 						<i class="fa fa-chevron-left" aria-hidden="true"></i>
@@ -90,7 +61,23 @@
 			</div>
 			
 			<div class="right-box">
-				<img src="img/test/intro.png" alt="" />
+				<div class="conn-box">
+					<span class="img-box">
+						<img src="/img/test/weixin.jpg" alt="" />
+						<p>微信</p>
+					</span>
+					<span class="img-box">
+						<img src="/img/test/qq.png" alt="" />
+						<p>QQ</p>
+					</span>
+				</div>
+				<hr>
+				<div class="tel-box">
+					<span>
+						<i class="fa fa-phone"></i>
+						18340857018
+					</span>
+				</div>
 			</div>
 			
 		</div>
