--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
-		<link href="http://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
+		<link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap-touch-slider.css" />
 		<!--<link rel="stylesheet" type="text/css" href="/css/video-js.min.css"/>-->
 		<link rel="stylesheet" type="text/css" href="/css/jquery.bscslider.css"/>
