--- a/programan-community-web/src/main/resources/static/index.html
+++ b/programan-community-web/src/main/resources/static/index.html
@@ -5,8 +5,9 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>主页</title>
+		<title>IT技术社区</title>
 		<!--<link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">-->
+		<link rel="shortcut icon" href="/img/logo/falo.png" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap4.min.css"/>
 		<link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.min.css"/>
 		<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
@@ -58,6 +59,7 @@
 				
 			</div>
 		</div>
+		
 	</body>
 	<!--<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>-->
 	<script src="/js/jquery1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
