--- a/programan-community-web/src/main/resources/static/login.html
+++ b/programan-community-web/src/main/resources/static/login.html
@@ -6,6 +6,7 @@
 		<!-- default header name is X-CSRF-TOKEN -->
 		<!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 		<title>登录</title>
+		<link rel="shortcut icon" href="/img/logo/falo.png" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
