--- a/programan-community-web/src/main/resources/static/manager.html
+++ b/programan-community-web/src/main/resources/static/manager.html
@@ -14,7 +14,7 @@ Purchase: http://wrapbootstrap.com
     <meta name="description" content="data tables" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/falo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.min.css"/>
 	<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <!--Basic Styles-->
@@ -79,7 +79,7 @@ Purchase: http://wrapbootstrap.com
                 <div class="navbar-header pull-left">
                     <a href="/user/logout" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="/img/logo/logo.png" alt="" />
                         </small>
                     </a>
                 </div>
