--- a/programan-community-web/src/main/resources/static/register.html
+++ b/programan-community-web/src/main/resources/static/register.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>注册</title>
+		<link rel="shortcut icon" href="/img/logo/falo.png" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
